# yukka-interview

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.example  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
book/marimo/notebooks/: Experiment1.py  Experiment2.py
src/honey/: __init__.py
src/honey/data/: __init__.py  config.py  repository.py  returns.py  yukka_repository.py
src/honey/data/cache/: benchmarks.parquet
src/interview/: __init__.py  signal.py  strategy.py
src/interview/data/: __init__.py  config.py
src/interview/data/cache/: ranks_wide.parquet
tests/: __init__.py  conftest.py  test_repository.py  test_returns.py  test_signal.py  test_strategy.py
