[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yukka-interview"
version = "0.1.0"
description = "Yukka Lab interview take-home: portfolio construction and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.2",
    "yukka>=0.3.2",
    "jquantstats>=0.8.0",
    "cvxpy>=1.8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interview"]

[dependency-groups]
dev = [
    "marimo>=0.19.6",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.13",
]
